refactor pipeline definitions into yaml, update constructors